<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:visibility="visible"
    tools:context=".DriverLoginRegister">

    <Button
        android:id="@+id/logy"
        android:layout_width="203dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="185dp"
        android:text="@string/login"
        android:visibility="visible" />

    <EditText
        android:id="@+id/emailDriver"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="370dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/emailDriver"
        android:inputType="textEmailAddress"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/passDriver"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="383dp"
        android:layout_marginBottom="284dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passwordDriver"
        android:inputType="textPassword"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="232dp"
        android:text="@string/register"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/black"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="198dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="488dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="553dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:visibility="visible" />

</RelativeLayout>