<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        tools:context=".MapsActivity"
        tools:layout="@layout/support_simple_spinner_dropdown_item" />

    <fragment
        android:id="@+id/place_autocomplete"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_width="wrap_content"

        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="561dp"
        android:visibility="visible"
        tools:ignore="MissingClass"
        tools:layout="@layout/place_autocomplete_item_prediction" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="286dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="367dp"
        android:contentDescription="@string/todo"
        android:rotationX="-25"
        android:src="@drawable/p1"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/loc"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="169dp"
        android:autofillHints=""
        android:background="@color/quantum_white_100"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        android:text="@string/location"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/calling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="247dp"
        android:text="@string/calling"

        android:textColorHighlight="#2196F3"
        android:textColorHint="#9C27B0"
        android:textColorLink="#E91E63"
        android:visibility="visible" />


</RelativeLayout>
